# ros_erle_baro

./: CMakeLists.txt  README.md  package.xml
msg/: bar.msg
scripts/: MS5611.py  bar.py  barometer.py  baromoter.py
src/: MS5611.cpp  MS5611.h  barometer.cpp
